@@ -2,6 +2,8 @@
 0.0.10
 ========================
 
+- improved HTMLParser parser
+
 ========================
 0.0.9
 ========================
